cmake_minimum_required(VERSION 3.8)
project(4__Esercizio_4___Code_a_priorita)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        "Heap Clion/L_Heap.c"
        "Heap Clion/L_Heap.h"
        "Heap Clion/L_Utility.c"
        "Heap Clion/L_Utility.h"
        "Heap Clion/main.c")

add_executable(4__Esercizio_4___Code_a_priorita ${SOURCE_FILES})